# synapse

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  rustfmt.toml
.github/workflows/: rust.yml
axon/: Cargo.toml
axon/src/: build.rs  cache.rs  capabilities.rs  lib.rs  main.rs  project.rs
cortex/: Cargo.toml
cortex/src/: ast.rs  checker.rs  emitter.rs  error.rs  lexer.rs  lib.rs  main.rs  module.rs  parser.rs  token.rs  typed_ast.rs
cortex/tests/: integration.rs
docs/: architecture.md  builtins.md  cli.md  grammar.ebnf  guide.md  intent.md  language.md  project-config.md
examples/intent/: README.md
examples/intent/applications/: app_factorial.intent  app_list_stats.intent  app_math_module.intent  app_weather.intent  app_with_library.intent  app_wordcount.intent
examples/intent/modules/: algorithms.intent  creative.intent  data_pipeline.intent  list_processing.intent  lists.intent  math.intent  number_theory.intent  statistics.intent
examples/synapse/: README.md  collatz.synapse  gcd.synapse  list_reverse.synapse  power.synapse  weather.synapse  weather_demo.synapse
examples/synapse/multifile/: main.synapse  math.synapse
intent/: Cargo.toml
intent/src/: ast.rs  error.rs  expander.rs  guardrails.rs  lexer.rs  lib.rs  llm.rs  parser.rs  prompt.rs  templates.rs  token.rs  validator.rs
intent/tests/: integration.rs
tests/programs/: factorial.synapse  fibonacci.synapse  list_length.synapse  list_sum.synapse
