[package]
name = "intent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
cortex = { path = "../cortex" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }
